@@ -22,5 +22,4 @@
 from .delegate import Delegate
 from .observable import Observable
 
-
 __all__ = ["Delegate", "Observable"]
