@@ -1,5 +1,10 @@
 2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/base/observable.py:
+	Add contracts.
+
+2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* gaupol/base/_mutables.py:
 	Add contracts.
 
